--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url(/img/background-img.png) no-repeat;
+    background: url(/portfolioformobileandweb/img/background-img.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
