--- a/index.css
+++ b/index.css
@@ -82,6 +82,9 @@ section {
     font-weight: 700;
     line-height: 1.3;
 }
+.home-content h1 span{
+    color: var(--text-bg-color);
+}
 .home-content .text-animated{
     position: relative;
     width: 32.8rem;
@@ -193,7 +196,7 @@ section {
     width: 45%;
     height: 100%;
     background: transparent;
-    border: 2px solid rgb(202, 69, 69);
+    border: 2px solid var(--bg-color);
     transition: .3s;
 }
 .home-imageHover:hover{
@@ -435,4 +438,125 @@ section {
 }
 .skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span{
     width: 30%;
+}
+/*Contact us Section and Design*/
+.contactus{
+    min-height: auto;
+    padding-bottom: 7rem;
+}
+.contactus form{
+    max-width: 70rem;
+    margin: 0 auto;
+    text-align: center;
+}
+.contactus form .input-box{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.contactus form .input-box .input-field{
+    position: relative;
+    width: 49%;
+    margin: 2rem 0;
+}
+.contactus form .input-box .input-field input,
+.contactus form .textarea-field textarea{
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color:  var(--text-bg-color);
+    border-radius: .6rem;
+    border: .2rem solid var(--main-bg-color);
+    background: transparent;
+}
+.contactus form .input-box .input-field input::placeholder,
+.contactus form .textarea-field textarea::placeholder{
+    color: var(--text-bg-color);
+}
+
+.contactus form .focus{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .3s;
+}
+.contactus form .input-box .input-field input:focus~.focus,
+.contactus form .input-box .input-field input:valid~.focus,
+.contactus form .textarea-field  textarea:focus~.focus,
+.contactus form .textarea-field  textarea:valid~.focus{
+    width: 100%;
+
+}
+.contactus form .textarea-field{
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+}
+.contactus form .textarea-field textarea{
+    resize: none;
+}
+.contactus form  .btn-box.btns .btn{
+    cursor: pointer;
+}
+/*Footer Design*/
+.footer{
+    min-height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--second-bg-color);    
+}
+.footer-text p{
+    font-size: 1.6rem;
+}
+.footer-iconTop a{
+    position: relative;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: .8rem;
+    background: var(--main-bg-color);
+    font-size: 2.5rem;
+    border: .2rem solid var(--main-bg-color);
+    border-radius: 30%;
+    text-decoration: none;
+    cursor: pointer;
+    z-index: 1;
+    overflow: hidden;
+    
+}
+.footer-iconTop a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    z-index: -1;
+    background-color: var(--second-bg-color);
+    transition: .3s;
+}
+.footer-iconTop a:hover:before{
+    width: 100%;
+}
+
+
+.footer-iconTop a i{
+    font-size: 2.4rem;
+    color: var(--bg-color);
+    transition: .3s;
+}
+
+.footer-iconTop a:hover i{
+    color: var(--main-bg-color);
 }
