--- a/index.css
+++ b/index.css
@@ -32,7 +32,11 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;    
+    z-index: 100;
+    transition: .3s;
+}
+.header.sticky{
+    background: #6b8094;
 }
 .logo{
     font-size: 2.5rem;
@@ -559,4 +563,17 @@ section {
 
 .footer-iconTop a:hover i{
     color: var(--main-bg-color);
+}
+/*Media Screen*/
+@media (max-width:1200px){
+    html{
+        font-size: 55%;
+    }
+}
+
+/*For Mobile */
+@media (max-width:991px){
+    .header{
+        padding: 2rem 4%;
+    }
 }
