--- a/index.css
+++ b/index.css
@@ -107,13 +107,14 @@ section {
 }
 .home-content .text-animated h3::before{
     content: '';
+    position: absolute;
     top: 0;
     left: 0;
     width: 0;
-    height: 100%;
+    height: 20%;
     border-right: 2px solid var(--main-bg-color);
     z-index: -1;
-    animation: typingcursor 6s linear infinite;
+    animation: typingnamecursor 6s linear infinite;
     animation-delay: 2s;
 }
 /*keyframe for animation name */
@@ -128,15 +129,15 @@ section {
     }
 }
 /*keyframe for animation cursor */
-@keyframes typingcursor {
+@keyframes typingnamecursor {
         0%, 10%, 100% {
         width: 0;
 
     }
 
     65%, 78%, 85% {
-        width: 100%;
-        opacity: 1;
+        width: 63%;
+        opacity: -3;
 
     }
 
