--- a/index.css
+++ b/index.css
@@ -520,23 +520,23 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 20%;
     position: relative;
     background: var(--bg-color);
     padding: 10px;
-    animation: coloranime 1s ease infinite;
+    animation: coloranime 3s ease infinite;
     animation-delay: 10s;
     box-shadow: 0 0 0 10px var(--btn-color-background), var(--main-bg-color);
+    top: 20px;
 }
 @keyframes coloranime{
     0%{
         transform: translateX(0%);
-        box-shadow: 0 0 0 10px var(--btn-color-background);
+        box-shadow: 10px 0 0 var(--btn-color-background);
 
     }
     50%{
         transform: translateX(-10%);
-        box-shadow: 0 0 0 10px var(--second-bg-color);
+        box-shadow: 0 10px 0 var(--second-bg-color);
     }
     100%{
         transform: translateX(10%);
@@ -551,6 +551,12 @@ section {
     align-items: center;
     padding-top: 10px;
     margin-top: 20px;
+}
+.project-container  .btn-box.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .project-container  .btn-box.btns a{
     width: 100%;
