--- a/index.css
+++ b/index.css
@@ -14,6 +14,17 @@
     --text-bg-color: rgb(248, 246, 246);
     --main-bg-color: #0077C0;
     --btn-color-background: #748DAE;
+    --text-home-content: rgb(255, 255, 255);
+    --text-nav-color: rgb(255, 255, 255);
+}
+.lightmode{
+    --bg-color:#f4f5f7;
+    --second-bg-color: #fdfdfd;
+    --text-bg-color: rgb(0, 0, 0);
+    --main-bg-color: #3775e7;
+    --btn-color-background: #748DAE;
+    --text-home-content: rgb(255, 255, 255);
+    --text-nav-color: rgb(255, 255, 255);
 }
 html{
     font-size: 62.5%;
@@ -50,7 +61,7 @@ span{
 }
 .navbar a{
     font-size: 1.7rem;
-    color: var(--text-bg-color);
+    color: var(--text-nav-color);
     font-weight: 500;
     margin-left: 3.5rem;
     transition: .3s;
@@ -59,6 +70,16 @@ span{
 .navbar a:hover, .navbar a.linknavbaractive{
     color: var(--main-bg-color);
 }
+ .navbar #lightmodes{
+    width: 10rem;
+    height: 100%;
+    cursor: pointer;
+    padding: 10px;
+    font-size: .9;
+    margin-left: 10px;
+    border: none;
+    border-radius: 10px;
+ }
 
 /*menu bar*/
 #menu-icon{
@@ -87,6 +108,7 @@ section {
     font-size: 4.6rem;
     font-weight: 700;
     line-height: 1.3;
+    color: var(--text-home-content);
 }
 
 .home-content .text-animated{
@@ -152,6 +174,7 @@ section {
 .home-content p{
     font-size: 1.6rem;
     margin: 2rem 0 4rem;
+    color: var(--text-home-content)
 }
 .btn-box{
     position: relative;
