--- a/index.css
+++ b/index.css
@@ -41,15 +41,16 @@ body{
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background-color: transparent;
+    background: var(--btn-color-background);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
     transition: .3s;
+    
 }
 .header.sticky{
-    background: #6b8094;
+    background: var(--bg-color);
 }
 .logo{
     font-size: 2.5rem;
