change color for navbar link when light or dark mode

--- a/index.css
+++ b/index.css
@@ -70,7 +70,18 @@ span{
 }
 
 .navbar a:hover, .navbar a.linknavbaractive{
-    color: var(--main-bg-color);
+    width: 100%;
+    padding: 10px;
+    background: var(--main-bg-color);
+    border: none;
+    border-radius: 10px;
+}
+.navbar a::before, .navbar a.linknavbaractive::before{
+    width: 100%;
+    padding: 10px;
+    background: var(--main-bg-color);
+    border: none;
+    border-radius: 10px;
 }
  .navbar #lightmodes{
     width: 10rem;
